Image not Showing after Case Status update issue is fixed and also Manager UI is fixed

--- a/src/assets/styles/scss/components/_ticket-btn.scss
+++ b/src/assets/styles/scss/components/_ticket-btn.scss
@@ -17,6 +17,14 @@
         transform: scale(1.4);
         box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
     }
+    @media only screen and (max-width: 768px){
+        font-size: 10px;
+    }
+    #btn-txt{
+        @media only screen and (max-width: 768px){
+            display: none;
+        } 
+    }
     @keyframes float{
         0%{
             right: 60px;
